--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -7,6 +7,6 @@
     <h5 class="font-medium">Hola {{ request.user.username }},</h5>
     <h3>Bienvenido</h3>
     <div class="card" style="margin-top: 40px">
-        <h6>Ganancias de hoy</h6>
+        <h6>Pronto...</h6>
     </div>
 {% endblock content %}
