--- a/templates/partials/navbar-page.html
+++ b/templates/partials/navbar-page.html
@@ -3,7 +3,7 @@
     <div class="container page__navbar-content">
         <div class="page__navbar-left">
             <a href="{% url 'pages:index' %}" class="page--logo">
-                <img src="{% static 'img/logo-light.png' %}" alt="CuyClick - Courier">
+                <img src="{% static 'img/logo-light.png' %}" width="170px" alt="CuyClick - Courier">
             </a>
         </div>
         <a class="navbar__menu" @click="isOpen = true">
